# num-expr

./: CHANGELOG.md  LICENSE  README.md  flake.nix  num-expr.cabal
app/: Main.hs
src/: WithFree.hs  WithoutFree.hs
